--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,34 @@
 {
   "name": "LOS Familia",
-  "short_name": "LOS Familia",
+  "short_name": "LOSFamilia",
   "description": "Life Operating System for Families",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f0f9ff",
   "theme_color": "#3b82f6",
-  "orientation": "any",
+  "orientation": "landscape",
+  "categories": ["lifestyle", "productivity"],
   "icons": [
     {
-      "src": "/icons/icon-192.svg",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.svg",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.svg",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-192.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ]
 }
